app/vproapp-loadbalancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: vproapp
  type: LoadBalancer
