app/vproapp-nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  ports:
  - port: 8090
    nodePort: 30001
    targetPort: 8080
    protocol: TCP
  selector:
    app: vproapp
  type: NodePort
